src/components/sbb-selection-panel/sbb-selection-panel.scss
@use '../../global/styles' as sbb;

// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin
@include sbb.host-component-properties;

:host {
  --sbb-selection-panel-cursor: pointer;
  --sbb-selection-panel-background: var(--sbb-color-white-default);
  --sbb-selection-panel-border-color: var(--sbb-color-cloud-default);
  --sbb-selection-panel-animation-duration: var(--sbb-animation-duration-4x);
  --sbb-selection-panel-border-width: var(--sbb-border-width-1x);
  --sbb-selection-panel-input-pointer-events: all;
  --sbb-selection-panel-input-padding: var(--sbb-spacing-responsive-xs)
    var(--sbb-spacing-responsive-xxs);
  --sbb-selection-panel-content-visibility: hidden;
  --sbb-selection-panel-content-grid-template-rows: 0fr;
  --sbb-selection-panel-content-opacity: 0;
  --sbb-selection-panel-content-padding-inline: var(--sbb-spacing-responsive-xxs);
  --sbb-selection-panel-content-transition: grid-template-rows
      var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing),
    padding var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing),
    opacity var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing);

  // As the selection panel has always a white/milk background, we have to fix the focus outline color
  // to default color for cases where the selection panel is used in a negative context.
  --sbb-focus-outline-color: var(--sbb-focus-outline-color-default);

  display: contents;
}

:host([color='milk']) {
  --sbb-selection-panel-background: var(--sbb-color-milk-default);
}

:host([data-checked]) {
  --sbb-selection-panel-border-color: var(--sbb-color-charcoal-default);
}

:host([data-has-content][data-disabled]) {
  --sbb-selection-panel-input-pointer-events: none;
  --sbb-selection-panel-border-color: var(--sbb-color-cloud-default);
}

:host([data-disabled]) {
  --sbb-selection-panel-cursor: default;
}

:host([borderless]:not([data-checked])) {
  --sbb-selection-panel-border-color: transparent;
}

:host(:is([data-resize-disable-animation], [disable-animation]:not([disable-animation='false']))) {
  --sbb-selection-panel-animation-duration: 0s;
}

:host([data-has-content][force-open]:not([force-open='false'])),
:host([data-has-content][data-checked]) {
  --sbb-selection-panel-input-padding: var(--sbb-spacing-responsive-xs)
    var(--sbb-spacing-responsive-xxs) var(--sbb-spacing-responsive-xxs)
    var(--sbb-spacing-responsive-xxs);
  --sbb-selection-panel-content-visibility: visible;
  --sbb-selection-panel-content-grid-template-rows: 1fr;
  --sbb-selection-panel-content-opacity: 1;
  --sbb-selection-panel-content-padding-block-end: var(--sbb-spacing-responsive-xs);
  --sbb-selection-panel-content-transition: grid-template-rows
      var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing),
    padding var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing),
    opacity var(--sbb-selection-panel-animation-duration)
      var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing);
}

.sbb-selection-panel {
  flex: auto;
  position: relative;
  width: 100%;
  background-color: var(--sbb-selection-panel-background);
  border: var(--sbb-selection-panel-border-width) solid var(--sbb-selection-panel-border-color);
  border-radius: var(--sbb-border-radius-4x);
  transition: {
    duration: var(--sbb-selection-panel-animation-duration);
    timing-function: var(--sbb-animation-easing);
    property: border-color;
  }
}

.sbb-selection-panel__badge {
  user-select: none;
  pointer-events: none;
  position: absolute;
  inset: 0;
  border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-selection-panel-border-width));
  overflow: hidden;
}

.sbb-selection-panel__content--wrapper {
  display: grid;
  grid-template-rows: var(--sbb-selection-panel-content-grid-template-rows);
  visibility: var(--sbb-selection-panel-content-visibility);
  opacity: var(--sbb-selection-panel-content-opacity);
  padding-inline: var(--sbb-selection-panel-content-padding-inline);
  padding-block-end: var(--sbb-selection-panel-content-padding-block-end);
  transition: var(--sbb-selection-panel-content-transition);
}

.sbb-selection-panel__content {
  overflow: hidden;
}

sbb-divider {
  margin-block-end: var(--sbb-spacing-responsive-xxs);
}

::slotted(sbb-radio-button),
::slotted(sbb-checkbox) {
  cursor: var(--sbb-selection-panel-cursor);
  pointer-events: var(--sbb-selection-panel-input-pointer-events);
  display: block;
  padding: var(--sbb-selection-panel-input-padding);
  transition: {
    duration: var(--sbb-selection-panel-animation-duration);
    timing-function: var(--sbb-animation-easing);
    property: padding;
  }
}

